WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102550
DFG constant folding phase should say 'changed = true' whenever it changes the graph
https://bugs.webkit.org/show_bug.cgi?id=102550
Summary
DFG constant folding phase should say 'changed = true' whenever it changes th...
Filip Pizlo
Reported
2012-11-16 12:24:16 PST
Already rubber-stamped by Mark Hahnenberg.
Attachments
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-11-18 13:35:04 PST
Landed in
http://trac.webkit.org/changeset/135079
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug