DFG constant folding phase should say 'changed = true' whenever it changes the graph https://bugs.webkit.org/show_bug.cgi?id=102550

Rubber stamped by Mark Hahnenberg.

* dfg/DFGConstantFoldingPhase.cpp:
(JSC::DFG::ConstantFoldingPhase::foldConstants):



Canonical link: https://commits.webkit.org/120754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135079 268f45cc-cd09-0410-ab3c-d52691b4dbfc